--- a/templates/_footer.html.twig
+++ b/templates/_footer.html.twig
@@ -1,7 +1,7 @@
 {% include 'admin/base.html.twig' %}
 
 {% block stylesheets %}
-    <link rel="stylesheet" href="{{ asset('css/navbar.css') }}">
+    <link rel="stylesheet" href="{{ asset('css/navbar.scss') }}">
     <link rel="stylesheet" href="{{ asset('css/headers.css') }}">
     {{ encore_entry_link_tags('app') }}
 {% endblock stylesheets %}
