--- a/templates/_header.html.twig
+++ b/templates/_header.html.twig
@@ -14,7 +14,7 @@
         <link rel="stylesheet" href="{{ asset('css/burger.css') }}">
         <link rel="stylesheet" href="{{ asset('css/search.css') }}">
         {% block stylesheets %}
-            <link rel="stylesheet" href="{{ asset('css/navbar.css') }}">
+            <link rel="stylesheet" href="{{ asset('css/navbar.scss') }}">
             <link rel="stylesheet" href="{{ asset('css/headers.css') }}">
             {{ encore_entry_link_tags('app') }}
         {% endblock stylesheets %}
