--- a/templates/front/base.html.twig
+++ b/templates/front/base.html.twig
@@ -29,16 +29,19 @@
 
     <!--css-->
     <link href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@100&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="{{ asset('css/navbar.css') }}">
+    <link rel="stylesheet" href="{{ asset('css/navbar.scss') }}">
     <link rel="stylesheet" href="{{ asset('css/headers.css') }}">
     {% block stylesheets %}
         <link rel="stylesheet" href="{{ asset('css/navbar.css') }}">
         <link rel="stylesheet" href="{{ asset('css/headers.css') }}">
+        <link rel="stylesheet" href="{{ asset('css/card.scss') }}">
         {{ encore_entry_link_tags('app') }}
     {% endblock stylesheets %}
+
     {% block javascripts %}
         {{ encore_entry_script_tags('app') }}
     {% endblock javascripts %}
+
     <svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
         <symbol id="bootstrap" viewBox="0 0 118 94">
             <title>Bootstrap</title>
