--- a/templates/Bundles/TwigBundle/Exception/error.html.twig
+++ b/templates/Bundles/TwigBundle/Exception/error.html.twig
@@ -9,24 +9,38 @@
     <link rel="stylesheet" href="{{ asset('css/details.css') }}">
     <link rel="stylesheet" href="{{ asset('css/burger.css') }}">
     <link rel="stylesheet" href="{{ asset('css/search.css') }}">
+    <link rel="stylesheet" href="{{ asset('css/navbar.scss') }}">
+    {{ parent()}}
+    {{ encore_entry_link_tags('app') }}
 {% endblock stylesheets %}
 
+{% block javascripts %}
+    {{ encore_entry_script_tags('app') }}
+{% endblock javascripts %}
+
 {% block main %}
-    <section class="section">
+    <section class="">
+        <div class="line"></div>
         <div class="">
-            <form action="{{ path('search_all') }}">
-                <article class="detail">
-                    <div class="card-text" id="divSearch">
-                        <div class="btn logo icon"><label for="userId"><img src="{{ asset('icon/loupe.png') }}" alt="loupe"></label>
+            <div class="">
+                {% block search %}
+                    <form action="{{ path('front_search_clubs') }}">
+                        <div id="divSearch">
+                            <div class="btn logo icon">
+                                <label for="userId">
+                                    <img class="logo icon" src="{{ asset('icon/loupe.png') }}" alt="loupe">
+                                </label>
+                            </div>
+                            <div class="btn">
+                                <input type="text" id="userId" name="query" placeholder="Ville, Code postal">
+                            </div>
+                            <input type="submit">
                         </div>
-                        <div class="btn"><input type="text" id="userId" name="query" placeholder="Ville, Code postal">
-                        </div>
-                        {% block search %}{% endblock search %}
-                    </div>
-                </article>
-            </form>
-        </div>
-        <div class="line">
+                    </form>
+                {% endblock search %}
+            </div>
+            <div class="line">
+            </div>
 
             <h1>La page n'a ps été trouvé car elle n'existe pas </h1>
             <a class="" href="{{ path('home') }}"><img src="{{ asset('uploads/fallin-nyjah.jpg') }}" alt="logo"></a>
@@ -38,45 +52,45 @@
         </div>
         <article>
             <div class="homeElement">
-                <div class="element"><a><img class="logoBig" href="{{ path('sessions') }}" src="{{ asset('icon/sessions_titre.png') }}" alt="Session"></a></div>
-                <div class="element"><a><img class="logoBig" href="{{ path('sessions') }}" src="{{ asset('icon/session.png') }}" alt="Session-icon"></a></div>
+                <div class="element"><a><img class="logoBig" href="{{ path('front_sessions') }}" src="{{ asset('icon/sessions_titre.png') }}" alt="Session"></a></div>
+                <div class="element"><a><img class="logoBig" href="{{ path('front_sessions') }}" src="{{ asset('icon/session.png') }}" alt="Session-icon"></a></div>
             </div>
             <div class="line"></div>
 
-            <a href="{{ path('sessions') }}">Voir toutes les sessions</a>
+            <a href="{{ path('front_sessions') }}">Voir toutes les sessions</a>
         </article>
     </section>
     <section class="section">
         <article>
             <div class="homeElement">
-                <div class="element"><img class="logoBig" href="{{ path('skateparks') }}" src="{{ asset('icon/skateparks_titre.png') }}" alt="skateparks"></div>
-                <div class="element"><img class="logoBig" href="{{ path('skateparks') }}" src="{{ asset('icon/skateparks.png') }}" alt="skateparks-icon"></div>
+                <div class="element"><img class="logoBig" href="{{ path('front_skateparks') }}" src="{{ asset('icon/skateparks_titre.png') }}" alt="skateparks"></div>
+                <div class="element"><img class="logoBig" href="{{ path('front_skateparks') }}" src="{{ asset('icon/skateparks.png') }}" alt="skateparks-icon"></div>
             </div>
             <div class="line"></div>
 
-            <a href="{{ path('skateparks') }}">Voir tous les skateparks</a>
+            <a href="{{ path('front_skateparks') }}">Voir tous les skateparks</a>
+        </article>
+    </section>
+    <section class="front_section">
+        <article>
+            <div class="homeElement">
+                <div class="element"><img class="logoBig" href="{{ path('front_clubs') }}" src="{{ asset('icon/clubs_titre.png') }}" alt="Club"></div>
+                <div class="element"><img class="logoBig" href="{{ path('front_clubs') }}" src="{{ asset('icon/club.png') }}" alt="Club-icon"></div>
+            </div>
+            <div class="line"></div>
+
+            <a href="{{ path('front_clubs') }}">Voir tous les clubs</a>
         </article>
     </section>
     <section class="section">
         <article>
             <div class="homeElement">
-                <div class="element"><img class="logoBig" href="{{ path('clubs') }}" src="{{ asset('icon/clubs_titre.png') }}" alt="Club"></div>
-                <div class="element"><img class="logoBig" href="{{ path('clubs') }}" src="{{ asset('icon/club.png') }}" alt="Club-icon"></div>
+                <div class="element"><img class="logoBig" href="{{ path('front_shops') }}" src="{{ asset('icon/shops_titre.png') }}" alt="shops"></div>
+                <div class="element"><img class="logoBig" href="{{ path('front_shops') }}" src="{{ asset('icon/shops.png') }}" alt="shops-icon"></div>
             </div>
             <div class="line"></div>
 
-            <a href="{{ path('clubs') }}">Voir tous les clubs</a>
-        </article>
-    </section>
-    <section class="section">
-        <article>
-            <div class="homeElement">
-                <div class="element"><img class="logoBig" href="{{ path('shops') }}" src="{{ asset('icon/shops_titre.png') }}" alt="shops"></div>
-                <div class="element"><img class="logoBig" href="{{ path('shops') }}" src="{{ asset('icon/shops.png') }}" alt="shops-icon"></div>
-            </div>
-            <div class="line"></div>
-
-            <a href="{{ path('shops') }}">Voir tous les shops</a>
+            <a href="{{ path('front_shops') }}">Voir tous les shops</a>
         </article>
     </section>
 
