--- a/templates/admin/clubs.html.twig
+++ b/templates/admin/clubs.html.twig
@@ -1,97 +1,251 @@
 {% extends "admin/base.html.twig" %}
 
-{% block stylesheets %}
-    <link rel="stylesheet" href="{{ asset('css/details.css') }}">
-    <link rel="stylesheet" href="{{ asset('css/burger.css') }}">
-    <link rel="stylesheet" href="{{ asset('css/search.css') }}">
-{% endblock stylesheets %}
+   {% block stylesheets %}
+       <link rel="stylesheet" href="{{ asset('css/details.css') }}">
+       <link rel="stylesheet" href="{{ asset('css/burger.css') }}">
+       <link rel="stylesheet" href="{{ asset('css/search.css') }}">
+       <link rel="stylesheet" href="{{ asset('css/navbar.scss') }}">
+       {{ parent()}}
+       {{ encore_entry_link_tags('app') }}
+   {% endblock stylesheets %}
+
+{% block javascripts %}
+    {{ encore_entry_script_tags('app') }}
+{% endblock javascripts %}
 
 {% block metatitle %}
     Clubs | Skateboard Social Club
 {% endblock metatitle %}
 
-{% block main %}
-    <section class="">
-        <div id="ico">
 
+{% block main %}
+    <section class="section">
+        <div id="ico">
             <div class="element">
                 <a href="{{ path('admin_clubs') }}">
-                    <img class="title logoBig" href="{{ path('admin_clubs') }}" src="{{ asset('icon/clubs_titre.png') }}" alt="Clubs">
+                    <img class="title logoBig" href="{{ path('admin_clubs') }}" src="{{ asset('icon/clubs_titre.png') }}" alt="clubs">
                 </a>
             </div>
             <div class="element">
                 <a href="{{ path('admin_clubs') }}">
-                    <img class="title logoBig" href="{{ path('admin_clubs') }}" src="{{ asset('icon/club.png') }}" alt="Clubs-icon">
+                    <img class="title logoBig" href="{{ path('admin_clubs') }}" src="{{ asset('icon/club.png') }}" alt="clubs-icon">
                 </a>
             </div>
         </div>
         <div class="line"></div>
         <div class="">
-            {% block search %}
-                <form action="{{ path('admin_search_clubs') }}">
-                    <div id="divSearch">
-                        <div class="btn logo icon">
-                        <label for="userId">
-                            <img src="{{ asset('icon/loupe.png') }}" alt="loupe">
-                        </label>
+            <div class="">
+                {% block search %}
+                    <form action="{{ path('profile_search_clubs') }}">
+                        <div id="divSearch">
+                            <div class="btn logo icon">
+                                <label for="userId">
+                                    <img class="logo icon" src="{{ asset('icon/loupe.png') }}" alt="loupe">
+                                </label>
+                            </div>
+                            <div class="btn">
+                                <input type="text" id="userId" name="query" placeholder="Ville, Code postal">
+                            </div>
+                            <input type="submit">
                         </div>
-                        <div class="btn">
-                            <input type="text" id="userId" name="query" placeholder="Ville, Code postal">
-                        </div>
-                        <input type="submit">
-                        {#<div class="btn logo"><label for="userId"><img src="{{ asset('icon/loupe.png') }}" alt="loupe"></label></div> #}
-                         {#<div class="btn"><input type="text" id="userId" name="userId" placeholder="Ville, Code postal"></div> #}
-                    </div>
-                </form>
-            {% endblock search %}
-        </div>
-        <div class="line">
+                    </form>
+                {% endblock search %}
+            </div>
+            <div class="line">
+            </div>
         </div>
     </section>
-    <section class="section">
-        <article class="book-detail">
-            <article class="">
-            </article>
+
+    <section class="section center">
+        <article class="items">
             <div>
                 <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d22633.81659527818!2d-0.5881872095058547!3d44.83730877971263!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1secole%20skateboard%20bordeaux!5e0!3m2!1sfr!2sfr!4v1653350068064!5m2!1sfr!2sfr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
         </article>
     </section>
+
     <section class="section">
         <h3 class="al"> Aller à :</h3>
             {% for club in clubs %}
-                    <div class="card-text">
-                        <div class="card-t">
-                            <h1>{{ club.title }}</h1>
-                        </div>
+
+                <div class="card-t">
+                    <h1>{{ club.title }}</h1>
+                </div>
+                <div class="card mb-3">
+                    <img src="{{ asset('uploads/cover/'~club.coverFilename) }}" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
                         <div id="abs5" class="absolute ban" alt="banner-address">
                             <h2>{{ club.address}} {{ club.town}}</h2>
                         </div>
-                        <div id="sta1" class="static">
-                            <b>
-                                <img class="img img-card" src="{{ asset('uploads/cover/'~club.coverFilename) }}" alt="photo-club">
-                            </b>
-                        </div>
-                        {#             {% if skatepark.club %} #}
-                        {#                        <h3>{{ skatepark.club.town }} {{ skatepark.club.area }}</h3> #}
-                        {#                    {% endif %} #}
-                        <div class="card-ic">
-                            <div id="adm-btn" class="adm-btn">
-                                <div class="ic" ><a id="link1" href="{{ path('admin_club', {"id": club.id}) }}"><img src="{{ asset('icon/open-blue.png') }}" alt="Voir le club">
-                                        <br><h4 class="pad5">Voir le club</h4></a>
-                                </div>
-                                <div class="ic" ><a id="link2" href="{{ path('admin_club_create') }}"><img src="{{ asset('icon/add-file-green.png') }}" alt="Créer un club">
-                                        <br><h4 class="pad5">Créer un club</h4></a>
-                                </div>
-                                <div class="ic" ><a id="link3" href="{{ path('admin_club_update', {"id": club.id}) }}"><img src="{{ asset('icon/edit-pink.png') }}" alt="Modifier le club">
-                                        <br><h4 class="pad5">Modifier le club</h4></a>
-                                </div>
-                                <div class="ic" ><a id="link4" href="{{ path('admin_club_delete', {"id": club.id}) }}"><img src="{{ asset('icon/delete-orange.png') }}" alt="Supprimer le club">
-                                        <br><h4 class="pad5">Supprimer le club</h4></a>
+                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                        <div class="card-text">
+                            <div class="card-t">
+                                <h1>{{ club.title }}</h1>
+                            </div>
+                            <div id="abs5" class="absolute ban" alt="banner-address">
+                                <h2>{{ club.address}} {{ club.town}}</h2>
+                            </div>
+                            <div id="sta1" class="static">
+                                <b>
+                                    <img class="img img-card" src="{{ asset('uploads/cover/'~club.coverFilename) }}" alt="photo-club">
+                                </b>
+                            </div>
+                            {#             {% if skatepark.club %} #}
+                            {#                        <h3>{{ skatepark.club.town }} {{ skatepark.club.area }}</h3> #}
+                            {#                    {% endif %} #}
+                            <div class="card-ic">
+                                <div id="adm-btn" class="adm-btn">
+                                    <div class="ic" ><a id="link1" href="{{ path('admin_club', {"id": club.id}) }}"><img src="{{ asset('icon/open-blue.png') }}" alt="Voir le club">
+                                            <br><h4 class="pad5">Voir le club</h4></a>
+                                    </div>
+                                    <div class="ic" ><a id="link2" href="{{ path('admin_club_create') }}"><img src="{{ asset('icon/add-file-green.png') }}" alt="Créer un club">
+                                            <br><h4 class="pad5">Créer un club</h4></a>
+                                    </div>
+                                    <div class="ic" ><a id="link3" href="{{ path('admin_club_update', {"id": club.id}) }}"><img src="{{ asset('icon/edit-pink.png') }}" alt="Modifier le club">
+                                            <br><h4 class="pad5">Modifier le club</h4></a>
+                                    </div>
+                                    <div class="ic" ><a id="link4" href="{{ path('admin_club_delete', {"id": club.id}) }}"><img src="{{ asset('icon/delete-orange.png') }}" alt="Supprimer le club">
+                                            <br><h4 class="pad5">Supprimer le club</h4></a>
+                                    </div>
                                 </div>
                             </div>
                         </div>
+
                     </div>
+
+                </div>
+
+
+
+                <div class="card mb-2">
+                    <div class="row g-0">
+                        <div class="col-md-4">
+                            <img src="{{ asset('uploads/cover/'~club.coverFilename) }}" class="img-fluid rounded-start" alt="...">
+                        </div>
+                        <div class="col-md-8">
+                            <div class="card-body table-responsive">
+                                 <table class="table table-borderless">
+                                    <thead>
+                                        <tr>
+                                            <th scope="col">Lundi</th>
+                                            <th scope="col"> </th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                            <tr>
+                                                <th scope="row">Fermé</th>
+                                                <td> </td>
+                                            </tr>
+                                            <tr>
+                                                <th scope="row">Mardi</th>
+                                                <td></td>
+                                            </tr>
+                                            <tr>
+                                                <th scope="row">14</th>
+                                                <td>- 21</td>
+                                            </tr>
+                                            <tr>
+                                                <th scope="row">Mercredi</th>
+                                                <td></td>
+                                            </tr>
+                                            <tr>
+                                                <th scope="row">14</th>
+                                                <td>- 19</td>
+                                            </tr>
+                                            <tr>
+                                                <th scope="row">Jeudi</th>
+                                                <td></td>
+                                            </tr>
+                                            <tr>
+                                                <th scope="row">14</th>
+                                                <td>- 21</td>
+                                            </tr>
+                                            <tr>
+                                                <th scope="row">Vendredi</th>
+                                                <td></td>
+                                            </tr>
+                                            <tr>
+                                                <th scope="row">14</th>
+                                                <td>- 21</td>
+                                            </tr>
+                                            <tr>
+                                                <th scope="row">Samedi</th>
+                                                <td></td>
+                                            </tr>
+                                            <tr>
+                                                <th scope="row">14</th>
+                                                <td>- 19</td>
+                                            </tr>
+                                            <tr>
+                                                <th scope="row">Dimanche</th>
+                                                <td></td>
+                                            </tr>
+                                            <tr>
+                                                <th scope="row">14</th>
+                                                <td>- 19</td>
+                                            </tr>
+
+                                        </tbody>
+                                    </table>
+                                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                                <h5 class="card-title">Card title</h5>
+                                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="card-t">
+                    <h1>{{ club.title }}</h1>
+                </div>
+                <div class="card mb-3">
+                    <img src="{{ asset('uploads/cover/'~club.coverFilename) }}" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <div id="abs5" class="absolute ban" alt="banner-address">
+                            <h2>{{ club.address}} {{ club.town}}</h2>
+                        </div>
+                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                        <div class="card-text">
+                            <div class="card-t">
+                                <h1>{{ club.title }}</h1>
+                            </div>
+                            <div id="abs5" class="absolute ban" alt="banner-address">
+                                <h2>{{ club.address}} {{ club.town}}</h2>
+                            </div>
+                            <div id="sta1" class="static">
+                                <b>
+                                    <img class="img img-card" src="{{ asset('uploads/cover/'~club.coverFilename) }}" alt="photo-club">
+                                </b>
+                            </div>
+                            {#             {% if skatepark.club %} #}
+                            {#                        <h3>{{ skatepark.club.town }} {{ skatepark.club.area }}</h3> #}
+                            {#                    {% endif %} #}
+                            <div class="card-ic">
+                                <div id="adm-btn" class="adm-btn">
+                                    <div class="ic" ><a id="link1" href="{{ path('admin_club', {"id": club.id}) }}"><img src="{{ asset('icon/open-blue.png') }}" alt="Voir le club">
+                                            <br><h4 class="pad5">Voir le club</h4></a>
+                                    </div>
+                                    <div class="ic" ><a id="link2" href="{{ path('admin_club_create') }}"><img src="{{ asset('icon/add-file-green.png') }}" alt="Créer un club">
+                                            <br><h4 class="pad5">Créer un club</h4></a>
+                                    </div>
+                                    <div class="ic" ><a id="link3" href="{{ path('admin_club_update', {"id": club.id}) }}"><img src="{{ asset('icon/edit-pink.png') }}" alt="Modifier le club">
+                                            <br><h4 class="pad5">Modifier le club</h4></a>
+                                    </div>
+                                    <div class="ic" ><a id="link4" href="{{ path('admin_club_delete', {"id": club.id}) }}"><img src="{{ asset('icon/delete-orange.png') }}" alt="Supprimer le club">
+                                            <br><h4 class="pad5">Supprimer le club</h4></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+
+                </div>
+
+
             {% endfor %}
         </section>
 {% endblock main%}
