--- a/templates/admin/shops.html.twig
+++ b/templates/admin/shops.html.twig
@@ -8,51 +8,61 @@
     <link rel="stylesheet" href="{{ asset('css/details.css') }}">
     <link rel="stylesheet" href="{{ asset('css/burger.css') }}">
     <link rel="stylesheet" href="{{ asset('css/search.css') }}">
+    <link rel="stylesheet" href="{{ asset('css/navbar.scss') }}">
+    {{ parent()}}
+    {{ encore_entry_link_tags('app') }}
 {% endblock stylesheets %}
 
+{% block javascripts %}
+    {{ encore_entry_script_tags('app') }}
+{% endblock javascripts %}
+
 {% block main %}
-    <section class="">
+    <section class="section">
         <div id="ico">
             <div class="element">
                 <a href="{{ path('admin_shops') }}">
-                    <img class="title logoBig" src="{{ asset('icon/shops_titre.png') }}" alt="Shop">
+                    <img class="title logoBig" href="{{ path('admin_shops') }}" src="{{ asset('icon/shops_titre.png') }}" alt="shops">
                 </a>
             </div>
             <div class="element">
                 <a href="{{ path('admin_shops') }}">
-                    <img class="title logoBig" src="{{ asset('icon/skhop.png') }}" alt="Shop-icon">
+                    <img class="title logoBig" href="{{ path('admin_shops') }}" src="{{ asset('icon/shops.png') }}" alt="shops-icon">
                 </a>
             </div>
         </div>
         <div class="line"></div>
         <div class="">
-                <form action="{{ path('admin_search_shops') }}">
-                    {% block search %}
-                        <article class="detail">
-                            <div class="card-text" id="divSearch">
-                                <div class="btn logo icon"><label><img src="{{ asset('icon/loupe.png') }}" alt="loupe"></label>
-                                </div>
-                                <div class="btn">
-                                    <input type="text" name="query" placeholder="Ville, Code postal">
-                                </div>
-                                <input type="submit">
+            <div class="">
+                {% block search %}
+                    <form action="{{ path('profile_search_shops') }}">
+                        <div id="divSearch">
+                            <div class="btn logo icon">
+                                <label for="userId">
+                                    <img class="logo icon" src="{{ asset('icon/loupe.png') }}" alt="loupe">
+                                </label>
                             </div>
-                        </article>
-                    {% endblock search %}
-                </form>
-        </div>
-        <div class="line">
+                            <div class="btn">
+                                <input type="text" id="userId" name="query" placeholder="Ville, Code postal">
+                            </div>
+                            <input type="submit">
+                        </div>
+                    </form>
+                {% endblock search %}
+            </div>
+            <div class="line">
+            </div>
         </div>
     </section>
-    <section class="section">
-        <article class="book-detail">
-            <article class="">
-            </article>
-            <div>
+
+    <section class="section center">
+        <article class="items">
+            <div class="">
                 <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d11315.680982514892!2d-0.5710845672348571!3d44.84355753439826!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1sskateshop%20bordeaux!5e0!3m2!1sfr!2sfr!4v1653259555771!5m2!1sfr!2sfr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
         </article>
     </section>
+
     <section class="section">
         <h3 class="al"> Aller à :</h3>
             {% for shop in shops %}
