--- a/templates/admin/skateparks.html.twig
+++ b/templates/admin/skateparks.html.twig
@@ -4,23 +4,30 @@
     <link rel="stylesheet" href="{{ asset('css/details.css') }}">
     <link rel="stylesheet" href="{{ asset('css/burger.css') }}">
     <link rel="stylesheet" href="{{ asset('css/search.css') }}">
+    <link rel="stylesheet" href="{{ asset('css/navbar.scss') }}">
+    {{ parent()}}
+    {{ encore_entry_link_tags('app') }}
 {% endblock stylesheets %}
+
+{% block javascripts %}
+    {{ encore_entry_script_tags('app') }}
+{% endblock javascripts %}
 
 {% block metatitle %}
     Skateparks | Skateboard Social Club
 {% endblock metatitle %}
 
 {% block main %}
-    <section class="">
+    <section class="section">
         <div id="ico">
             <div class="element">
                 <a href="{{ path('admin_skateparks') }}">
-                        <img class="title logoBig" src="{{ asset('icon/skateparks_titre.png') }}" alt="Skatepark">
+                    <img class="title logoBig" href="{{ path('admin_skateparks') }}" src="{{ asset('icon/skateparks_titre.png') }}" alt="skateparks">
                 </a>
             </div>
             <div class="element">
                 <a href="{{ path('admin_skateparks') }}">
-                        <img class="title logoBig" src="{{ asset('icon/skateparks.png') }}" alt="Skatepark-icon">
+                    <img class="title logoBig" href="{{ path('admin_skateparks') }}" src="{{ asset('icon/skateparks.png') }}" alt="skateparks-icon">
                 </a>
             </div>
         </div>
@@ -28,12 +35,12 @@
         <div class="">
             <div class="">
                 {% block search %}
-                    <form action="{{ path('admin_search_skateparks') }}">
+                    <form action="{{ path('profile_search_skateparks') }}">
                         <div id="divSearch">
                             <div class="btn logo icon">
-                            <label for="userId">
-                                <img src="{{ asset('icon/loupe.png') }}" alt="loupe">
-                            </label>
+                                <label for="userId">
+                                    <img class="logo icon" src="{{ asset('icon/loupe.png') }}" alt="loupe">
+                                </label>
                             </div>
                             <div class="btn">
                                 <input type="text" id="userId" name="query" placeholder="Ville, Code postal">
@@ -47,15 +54,15 @@
             </div>
         </div>
     </section>
-    <section class="section">
-        <article class="book-detail">
-            <article class="">
-            </article>
+
+    <section class="section center">
+        <article class="items">
             <div>
                 <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d45267.45075272003!2d-0.571391187931922!3d44.837541008065486!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1sskatepark%20bordeaux!5e0!3m2!1sfr!2sfr!4v1653259114005!5m2!1sfr!2sfr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
         </article>
     </section>
+
     <section class="section">
         <h3 class="al"> Aller à :</h3>
         {% for skatepark in skateparks %}
