--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -25,10 +25,10 @@
         <link rel="mask-icon" href="/docs/5.2/assets/img/favicons/safari-pinned-tab.svg" color="#712cf9">
         <link rel="icon" href="/docs/5.2/assets/img/favicons/favicon.ico">
         <meta name="theme-color" content="#712cf9">
-        <link rel="stylesheet" href="{{ asset('css/navbar.css') }}">
+        <link rel="stylesheet" href="{{ asset('css/navbar.scss') }}">
         <link rel="stylesheet" href="{{ asset('css/headers.css') }}">
         {% block stylesheets %}
-            <link rel="stylesheet" href="{{ asset('css/navbar.css') }}">
+            <link rel="stylesheet" href="{{ asset('css/navbar.scss') }}">
             <link rel="stylesheet" href="{{ asset('css/headers.css') }}">
             {{ encore_entry_link_tags('app') }}
         {% endblock stylesheets %}
@@ -77,16 +77,16 @@
                     <div class="offcanvas-body bg-by">
                         <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                             <li class="nav-item">
-                                <a class="nav-link active w-line" aria-current="page" href="{{ path('sessions') }}">SESSIONS</a>
+                                <a class="nav-link active w-line" aria-current="page" href="{{ path('front_sessions') }}">SESSIONS</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link active  w-line" aria-current="page" href="{{ path('skateparks') }}">SKATEPARKS</a>
+                                <a class="nav-link active  w-line" aria-current="page" href="{{ path('front_skateparks') }}">SKATEPARKS</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link active  w-line" aria-current="page" href="{{ path('clubs') }}">CLUBS</a>
+                                <a class="nav-link active  w-line" aria-current="page" href="{{ path('front_clubs') }}">CLUBS</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link active  w-line" aria-current="page" href="{{ path('shops') }}">SHOPS</a>
+                                <a class="nav-link active  w-line" aria-current="page" href="{{ path('front_shops') }}">SHOPS</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link active w-line" href="{{ path('front_users') }}">RIDERS</a>
