--- a/templates/front/_footer.html.twig
+++ b/templates/front/_footer.html.twig
@@ -1,6 +1,6 @@
 
 {% block stylesheets %}
-    <link rel="stylesheet" href="{{ asset('css/navbar.css') }}">
+    <link rel="stylesheet" href="{{ asset('css/navbar.scss') }}">
     <link rel="stylesheet" href="{{ asset('css/headers.css') }}">
     {{ encore_entry_link_tags('app') }}
 {% endblock stylesheets %}
