--- a/templates/front/clubs.html.twig
+++ b/templates/front/clubs.html.twig
@@ -1,57 +1,68 @@
 {% extends "front/base.html.twig" %}
 
-{% block stylesheets %}
-    <link rel="stylesheet" href="{{ asset('css/details.css') }}">
-    <link rel="stylesheet" href="{{ asset('css/burger.css') }}">
-    <link rel="stylesheet" href="{{ asset('css/search.css') }}">
-{% endblock stylesheets %}
-
 {% block metatitle %}
     Clubs | Skateboard Social Club
 {% endblock metatitle %}
 
+   {% block stylesheets %}
+       <link rel="stylesheet" href="{{ asset('css/details.css') }}">
+       <link rel="stylesheet" href="{{ asset('css/burger.css') }}">
+       <link rel="stylesheet" href="{{ asset('css/search.css') }}">
+       <link rel="stylesheet" href="{{ asset('css/navbar.scss') }}">
+       {{ parent()}}
+       {{ encore_entry_link_tags('app') }}
+   {% endblock stylesheets %}
+
+{% block javascripts %}
+    {{ encore_entry_script_tags('app') }}
+{% endblock javascripts %}
+
 {% block main %}
-    <section class="">
+    <section class="section">
         <div id="ico">
             <div class="element">
-                <a href="{{ path('clubs') }}">
-                    <img class="title logoBig" href="{{ path('clubs') }}" src="{{ asset('icon/clubs_titre.png') }}" alt="Clubs">
+                <a href="{{ path('front_clubs') }}">
+                    <img class="title logoBig" href="{{ path('front_clubs') }}" src="{{ asset('icon/clubs_titre.png') }}" alt="clubs">
                 </a>
             </div>
             <div class="element">
-                <a href="{{ path('clubs') }}">
-                    <img class="title logoBig" href="{{ path('clubs') }}" src="{{ asset('icon/club.png') }}" alt="Clubs-icon">
+                <a href="{{ path('front_clubs') }}">
+                    <img class="title logoBig" href="{{ path('front_clubs') }}" src="{{ asset('icon/club.png') }}" alt="clubs-icon">
                 </a>
             </div>
         </div>
         <div class="line"></div>
         <div class="">
-            <form action="{{ path('search_clubs') }}">
-            {% block search %}
-                <article class="detail">
-                    <div class="card-text" id="divSearch">
-                        <div class="btn logo icon"><label for="userId"><img src="{{ asset('icon/loupe.png') }}" alt="loupe"></label>
+            <div class="">
+                {% block search %}
+                    <form action="{{ path('front_search_clubs') }}">
+                        <div id="divSearch">
+                            <div class="btn logo icon">
+                                <label for="userId">
+                                    <img class="logo icon" src="{{ asset('icon/loupe.png') }}" alt="loupe">
+                                </label>
+                            </div>
+                            <div class="btn">
+                                <input type="text" id="userId" name="query" placeholder="Ville, Code postal">
+                            </div>
+                            <input type="submit">
                         </div>
-                        <div class="btn"><input type="text" id="userId" name="query" placeholder="Ville, Code postal">
-                        </div>
-                        <input type="submit">
-                    </div>
-                </article>
-            {% endblock search %}
-            </form>
-        </div>
-        <div class="line">
+                    </form>
+                {% endblock search %}
+            </div>
+            <div class="line">
+            </div>
         </div>
     </section>
-    <section class="section">
-        <article class="book-detail">
-            <article class="">
-            </article>
+
+    <section class="section center">
+        <article class="items">
             <div>
-                <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d45267.45075272003!2d-0.571391187931922!3d44.837541008065486!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1sskatepark%20bordeaux!5e0!3m2!1sfr!2sfr!4v1653259114005!5m2!1sfr!2sfr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d22633.81659527818!2d-0.5881872095058547!3d44.83730877971263!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1secole%20skateboard%20bordeaux!5e0!3m2!1sfr!2sfr!4v1653350068064!5m2!1sfr!2sfr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
         </article>
     </section>
+
     <section class="section">
         <h3 class="al"> Aller à :</h3>
             {% for club in clubs %}
@@ -72,7 +83,7 @@
                     {#                    {% endif %} #}
                     <div class="card-ic">
                         <div id="adm-btn" class="adm-btn">
-                            <div class="ic" ><a id="link1" href="{{ path('club', {"id": club.id}) }}"><img src="{{ asset('icon/open-blue.png') }}" alt="Voir le club">
+                            <div class="ic" ><a id="link1" href="{{ path('front_club', {"id": club.id}) }}"><img src="{{ asset('icon/open-blue.png') }}" alt="Voir le club">
                                     <br><h4 class="pad5">Voir le club</h4></a>
                             </div>
                             <div class="ic" ><a id="link2" href="{{ path('profile_club_create') }}"><img src="{{ asset('icon/add-file-green.png') }}" alt="Créer un club">
