--- a/templates/front/clubs_search.html.twig
+++ b/templates/front/clubs_search.html.twig
@@ -8,37 +8,50 @@
     <link rel="stylesheet" href="{{ asset('css/details.css') }}">
     <link rel="stylesheet" href="{{ asset('css/burger.css') }}">
     <link rel="stylesheet" href="{{ asset('css/search.css') }}">
+    <link rel="stylesheet" href="{{ asset('css/navbar.scss') }}">
+    {{ parent()}}
+    {{ encore_entry_link_tags('app') }}
 {% endblock stylesheets %}
+
+{% block javascripts %}
+    {{ encore_entry_script_tags('app') }}
+{% endblock javascripts %}
+
+{% block title %}
+    searching result
+{% endblock title %}
 
 {% block main %}
     <section class="">
         <div id="ico">
+
             <div class="element">
-                <a href="{{ path('clubs') }}">
-                    <img class="title logoBig" href="{{ path('clubs') }}" src="{{ asset('icon/clubs_titre.png') }}" alt="Clubs">
+                <a href="{{ path('front_clubs') }}">
+                    <img class="title logoBig" href="{{ path('front_clubs') }}" src="{{ asset('icon/clubs_titre.png') }}" alt="Clubs">
                 </a>
             </div>
             <div class="element">
-                <a href="{{ path('clubs') }}">
-                    <img class="title logoBig" href="{{ path('clubs') }}" src="{{ asset('icon/club.png') }}" alt="Clubs-icon">
+                <a href="{{ path('front_clubs') }}">
+                    <img class="title logoBig" href="{{ path('front_clubs') }}" src="{{ asset('icon/club.png') }}" alt="Clubs-icon">
                 </a>
             </div>
         </div>
-    <div class="line"></div>
-    <div class="">
-        <form action="{{ path('search_clubs') }}">
-        {% block search %}
-            <article class="detail">
-                <div class="card-text" id="divSearch">
-                    <div class="btn logo icon"><label><img src="{{ asset('icon/loupe.png') }}" alt="loupe"></label>
-                    </div>
-                    <div class="btn"><input type="text" name="query" placeholder="Ville, Code postal">
-                    </div>
-                </div>
-            </article>
-        {% endblock search %}
-        </form>
-    </div>
+        <div class="line"></div>
+        <div class="">
+            <form action="{{ path('front_search_clubs') }}">
+                {% block search %}
+                    <article class="detail">
+                        <div class="card-text" id="divSearch">
+                            <div class="btn logo icon"><label><img src="{{ asset('icon/loupe.png') }}" alt="loupe"></label>
+                            </div>
+                            <div class="btn"><input type="text" name="query" placeholder="Ville, Code postal">
+                            </div>
+                        </div>
+                    </article>
+                {% endblock search %}
+            </form>
+        </div>
+
         <div class="line"></div>Voici le résultat de la recherche pour :
     {% for club in clubs %}
        {{  club.title  }}<br>
@@ -87,7 +100,7 @@
                     <div class="card-ic">
                         <div id="adm-btn" class="adm-btn">
                             <div class="ic" >
-                                <a id="link1" href="{{ path('club', {"id": club.id}) }}"><img src="{{ asset('icon/open-blue.png') }}" alt="Voir le club">
+                                <a id="link1" href="{{ path('front_club', {"id": club.id}) }}"><img src="{{ asset('icon/open-blue.png') }}" alt="Voir le club">
                                     <br><h4 class="pad5">Voir le club</h4>
                                 </a>
                             </div>
