--- a/templates/front/home.html.twig
+++ b/templates/front/home.html.twig
@@ -4,11 +4,19 @@
     Home | Skateboard Social Club
 {% endblock metatitle %}
 
+
 {% block stylesheets %}
     <link rel="stylesheet" href="{{ asset('css/details.css') }}">
     <link rel="stylesheet" href="{{ asset('css/burger.css') }}">
     <link rel="stylesheet" href="{{ asset('css/search.css') }}">
+    <link rel="stylesheet" href="{{ asset('css/navbar.scss') }}">
+    {{ parent()}}
+    {{ encore_entry_link_tags('app') }}
 {% endblock stylesheets %}
+
+{% block javascripts %}
+    {{ encore_entry_script_tags('app') }}
+{% endblock javascripts %}
 
 {% block main %}
        <section class="section">
@@ -29,8 +37,8 @@
                 <div class="line"></div>
            <article>
                <div class="homeElement">
-                   <div class="element"><a><img class="logoBig" href="{{ path('sessions') }}" src="{{ asset('icon/sessions_titre.png') }}" alt="Session"></a></div>
-                   <div class="element"><a><img class="logoBig" href="{{ path('sessions') }}" src="{{ asset('icon/session.png') }}" alt="Session-icon"></a></div>
+                   <div class="element"><a><img class="logoBig" href="{{ path('front_sessions') }}" src="{{ asset('icon/sessions_titre.png') }}" alt="Session"></a></div>
+                   <div class="element"><a><img class="logoBig" href="{{ path('front_sessions') }}" src="{{ asset('icon/session.png') }}" alt="Session-icon"></a></div>
                    </div>
                <div class="line"></div>
                {% for session in lastSessions %}
@@ -86,14 +94,14 @@
            </div>
        </div>
    {% endfor %}
-               <a href="{{ path('sessions') }}">Voir toutes les sessions</a>
+               <a href="{{ path('front_sessions') }}">Voir toutes les sessions</a>
            </article>
        </section>
        <section class="section">
            <article>
                <div class="homeElement">
-                   <div class="element"><img class="logoBig" href="{{ path('skateparks') }}" src="{{ asset('icon/skateparks_titre.png') }}" alt="skateparks"></div>
-                   <div class="element"><img class="logoBig" href="{{ path('skateparks') }}" src="{{ asset('icon/skateparks.png') }}" alt="skateparks-icon"></div>
+                   <div class="element"><img class="logoBig" href="{{ path('front_skateparks') }}" src="{{ asset('icon/skateparks_titre.png') }}" alt="skateparks"></div>
+                   <div class="element"><img class="logoBig" href="{{ path('front_skateparks') }}" src="{{ asset('icon/skateparks.png') }}" alt="skateparks-icon"></div>
                </div>
                <div class="line"></div>
                {% for skatepark in lastSkateparks %}
@@ -104,14 +112,14 @@
                        </div>
                    </div>
                {% endfor %}
-               <a href="{{ path('skateparks') }}">Voir tous les skateparks</a>
+               <a href="{{ path('front_skateparks') }}">Voir tous les skateparks</a>
            </article>
        </section>
        <section class="section">
            <article>
                <div class="homeElement">
-                   <div class="element"><img class="logoBig" href="{{ path('clubs') }}" src="{{ asset('icon/clubs_titre.png') }}" alt="Club"></div>
-                   <div class="element"><img class="logoBig" href="{{ path('clubs') }}" src="{{ asset('icon/club.png') }}" alt="Club-icon"></div>
+                   <div class="element"><img class="logoBig" href="{{ path('front_clubs') }}" src="{{ asset('icon/clubs_titre.png') }}" alt="Club"></div>
+                   <div class="element"><img class="logoBig" href="{{ path('front_clubs') }}" src="{{ asset('icon/club.png') }}" alt="Club-icon"></div>
                </div>
                <div class="line"></div>
                {% for club in lastClubs %}
@@ -122,14 +130,14 @@
                        </div>
                    </div>
                {% endfor %}
-               <a href="{{ path('clubs') }}">Voir tous les clubs</a>
+               <a href="{{ path('front_clubs') }}">Voir tous les clubs</a>
            </article>
        </section>
        <section class="section">
            <article>
                <div class="homeElement">
-                   <div class="element"><img class="logoBig" href="{{ path('shops') }}" src="{{ asset('icon/shops_titre.png') }}" alt="shops"></div>
-                   <div class="element"><img class="logoBig" href="{{ path('shops') }}" src="{{ asset('icon/shops.png') }}" alt="shops-icon"></div>
+                   <div class="element"><img class="logoBig" href="{{ path('front_shops') }}" src="{{ asset('icon/shops_titre.png') }}" alt="shops"></div>
+                   <div class="element"><img class="logoBig" href="{{ path('front_shops') }}" src="{{ asset('icon/shops.png') }}" alt="shops-icon"></div>
                </div>
                <div class="line"></div>
                {% for shop in lastShops %}
@@ -140,7 +148,7 @@
                        </div>
                    </div>
                {% endfor %}
-               <a href="{{ path('shops') }}">Voir tous les shops</a>
+               <a href="{{ path('front_shops') }}">Voir tous les shops</a>
            </article>
        </section>
        <!--
