--- a/templates/front/session.html.twig
+++ b/templates/front/session.html.twig
@@ -4,29 +4,38 @@
     {{ session.title }} | Skateboard Social Club
 {% endblock metatitle %}
 
+
 {% block stylesheets %}
     <link rel="stylesheet" href="{{ asset('css/details.css') }}">
     <link rel="stylesheet" href="{{ asset('css/burger.css') }}">
     <link rel="stylesheet" href="{{ asset('css/search.css') }}">
+    <link rel="stylesheet" href="{{ asset('css/navbar.scss') }}">
+    {{ parent()}}
+    {{ encore_entry_link_tags('app') }}
 {% endblock stylesheets %}
+
+{% block javascripts %}
+    {{ encore_entry_script_tags('app') }}
+{% endblock javascripts %}
+
 
 {% block main %}
     <section class="">
         <div id="ico">
             <div class="element">
-                <a href="{{ path('sessions') }}">
-                    <img class="title logoBig" href="{{ path('sessions') }}" src="{{ asset('icon/sessions_titre.png') }}" alt="Sessions">
+                <a href="{{ path('front_sessions') }}">
+                    <img class="title logoBig" href="{{ path('front_sessions') }}" src="{{ asset('icon/sessions_titre.png') }}" alt="Sessions">
                 </a>
             </div>
             <div class="element">
-                <a href="{{ path('sessions') }}">
-                    <img class="title logoBig" href="{{ path('sessions') }}" src="{{ asset('icon/session.png') }}" alt="Sessions-icon">
+                <a href="{{ path('front_sessions') }}">
+                    <img class="title logoBig" href="{{ path('front_sessions') }}" src="{{ asset('icon/session.png') }}" alt="Sessions-icon">
                 </a>
             </div>
         </div>
         <div class="line"></div>
         <div class="">
-            <form action="{{ path('search_sessions') }}">
+            <form action="{{ path('front_search_sessions') }}">
                 <article class="detail">
                     <div class="card-text" id="divSearch">
                         <div class="btn logo icon"><label for="userId"><img src="{{ asset('icon/loupe.png') }}" alt="loupe"></label>
@@ -105,12 +114,12 @@
                 <h3>{{ session.town }}</h3><br>
                 <h3>{{ session.area }}</h3><br>
                 {% if session.startAt %}
-                    <h3>La session est commencé depuis: {{ session.startAt  | date("Y-m-d H:i:s" ) |format_datetime('full', 'short', locale='fr') }}</h3><br>
+                    <h3>La session est commencé depuis: {{ session.startAt  | localizeddate('none', 'none', 'fr', null, 'EEEE d MMMM Y') }}</h3><br>
                 {% else %}
                     <h3>La session n'est pas commencé </h3><br>
                 {% endif %}
                 {% if session.finishedAt %}
-                    <h3>La session est finie depuis: {{ session.finishedAt  | date("Y-m-d H:i:s") |format_datetime('full', 'short', locale='fr') }}</h3><br>
+                    <h3>La session est finie depuis: {{ session.finishedAt  | localizeddate('none', 'none', 'fr', null, 'EEEE d MMMM Y') }}</h3><br>
                 {% else %}
                     <h3>La session n'est pas finie </h3><br>
                 {% endif %}
