--- a/templates/front/shops.html.twig
+++ b/templates/front/shops.html.twig
@@ -5,39 +5,48 @@
 {% endblock metatitle %}
 
 {% block stylesheets %}
+    {{ parent()}}
     <link rel="stylesheet" href="{{ asset('css/details.css') }}">
     <link rel="stylesheet" href="{{ asset('css/burger.css') }}">
     <link rel="stylesheet" href="{{ asset('css/search.css') }}">
+    <link rel="stylesheet" href="{{ asset('css/card.scss') }}">
+    {{ encore_entry_link_tags('app') }}
 {% endblock stylesheets %}
+    {% block javascripts %}
+        {{ encore_entry_script_tags('app') }}
+    {% endblock javascripts %}
 
 {% block main %}
     <section class="">
         <div id="ico">
             <div class="element">
-                <a href="{{ path('shops') }}">
+                <a href="{{ path('front_shops') }}">
                     <img class="title logoBig" src="{{ asset('icon/shops_titre.png') }}" alt="Shop">
                 </a>
             </div>
             <div class="element">
-                <a href="{{ path('shops') }}">
-                    <img class="title logoBig" src="{{ asset('icon/skhop.png') }}" alt="Shop-icon">
+                <a href="{{ path('front_shops') }}">
+                    <img class="title logoBig" src="{{ asset('icon/shops.png') }}" alt="Shop-icon">
                 </a>
             </div>
         </div>
         <div class="line"></div>
         <div class="">
-            <form action="{{ path('search_shops') }}">
                 {% block search %}
-                    <article class="detail">
-                        <div class="card-text" id="divSearch">
-                            <div class="btn logo icon"><label><img src="{{ asset('icon/loupe.png') }}" alt="loupe"></label>
+                    <form action="{{ path('search_shops') }}">
+                        <div id="divSearch">
+                            <div class="btn logo icon">
+                                <label for="userId">
+                                    <img class="logo icon" src="{{ asset('icon/loupe.png') }}" alt="loupe">
+                                </label>
                             </div>
-                            <div class="btn"><input type="text" name="query" placeholder="Ville, Code postal">
+                            <div class="btn">
+                                <input type="text" id="userId" name="query" placeholder="Ville, Code postal">
                             </div>
+                            <input type="submit">
                         </div>
-                    </article>
+                    </form>
                 {% endblock search %}
-            </form>
         </div>
         <div class="line">
         </div>
@@ -73,7 +82,7 @@
 
                 <div class="card-ic">
                     <div id="adm-btn" class="adm-btn">
-                        <div class="ic" ><a id="link1" href="{{ path('shop', {"id": shop.id}) }}"><img src="{{ asset('icon/open-blue.png') }}" alt="Voir le shop">
+                        <div class="ic" ><a id="link1" href="{{ path('front_shop', {"id": shop.id}) }}"><img src="{{ asset('icon/open-blue.png') }}" alt="Voir le shop">
                                 <br><h4 class="pad5">Voir le shop</h4></a>
                         </div>
                         <div class="ic" ><a id="link2" href="{{ path('profile_shop_create', {"id": shop.id}) }}"><img src="{{ asset('icon/add-file-green.png') }}" alt="Créer un shop">
