--- a/templates/front/skateparks.html.twig
+++ b/templates/front/skateparks.html.twig
@@ -2,57 +2,64 @@
 
 {% block stylesheets %}
     <link rel="stylesheet" href="{{ asset('css/details.css') }}">
-    <link rel="stylesheet" href="{{ asset('css/burger.css') }}">
-    <link rel="stylesheet" href="{{ asset('css/search.css') }}">
+    {{ parent()}}
+    {{ encore_entry_link_tags('app') }}
 {% endblock stylesheets %}
+
+{% block javascripts %}
+    {{ encore_entry_script_tags('app') }}
+{% endblock javascripts %}
 
 {% block metatitle %}
     Skateparks | Skateboard Social Club
 {% endblock metatitle %}
 
 {% block main %}
-    <section class="">
+    <section class="section">
         <div id="ico">
             <div class="element">
-                <a href="{{ path('skateparks') }}">
-                    <img class="title logoBig" src="{{ asset('icon/skateparks_titre.png') }}" alt="Skatepark">
+                <a href="{{ path('front_skateparks') }}">
+                    <img class="title logoBig" href="{{ path('front_skateparks') }}" src="{{ asset('icon/skateparks_titre.png') }}" alt="skateparks">
                 </a>
             </div>
             <div class="element">
-                <a href="{{ path('skateparks') }}">
-                    <img class="title logoBig" src="{{ asset('icon/skateparks.png') }}" alt="Skatepark-icon">
+                <a href="{{ path('front_skateparks') }}">
+                    <img class="title logoBig" href="{{ path('front_skateparks') }}" src="{{ asset('icon/skateparks.png') }}" alt="skateparks-icon">
                 </a>
             </div>
         </div>
         <div class="line"></div>
         <div class="">
-            {% block search %}
-                <form action="{{ path('search_skateparks') }}">
-                    <div id="divSearch">
-                        <div class="btn logo icon">
-                            <label for="userId">
-                                <img src="{{ asset('icon/loupe.png') }}" alt="loupe">
-                            </label>
+            <div class="">
+                {% block search %}
+                    <form action="{{ path('profile_search_skateparks') }}">
+                        <div id="divSearch">
+                            <div class="btn logo icon">
+                                <label for="userId">
+                                    <img class="logo icon" src="{{ asset('icon/loupe.png') }}" alt="loupe">
+                                </label>
+                            </div>
+                            <div class="btn">
+                                <input type="text" id="userId" name="query" placeholder="Ville, Code postal">
+                            </div>
+                            <input type="submit">
                         </div>
-                        <div class="btn">
-                            <input type="text" id="userId" name="query" placeholder="Ville, Code postal">
-                        </div>
-                        <input type="submit">
-                    </div>
-                </form>
-            {% endblock search %}
+                    </form>
+                {% endblock search %}
+            </div>
+            <div class="line">
+            </div>
         </div>
-        <div class="line"></div>
     </section>
-    <section class="section">
-        <article class="book-detail">
-            <article class="">
-            </article>
+
+    <section class="section center">
+        <article class="items">
             <div>
                 <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d45267.45075272003!2d-0.571391187931922!3d44.837541008065486!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1sskatepark%20bordeaux!5e0!3m2!1sfr!2sfr!4v1653259114005!5m2!1sfr!2sfr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
         </article>
     </section>
+
     <section class="section">
         {% for skatepark in skateparks %}
             <div class="card">
@@ -66,7 +73,7 @@
                     {#                        <h3>{{ skatepark.club.town }} {{ skatepark.club.area }}</h3> #}
                     {#                    {% endif %} #}
                 </div>
-                <a class="link" href="{{ path('skatepark', {"id": skatepark.id}) }}">Voir le skatepark</a>
+                <a class="link" href="{{ path('front_skateparks', {"id": skatepark.id}) }}">Voir le skatepark</a>
             </div>
         {% endfor %}
     </section>
