--- a/templates/profile/clubs.html.twig
+++ b/templates/profile/clubs.html.twig
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="{{ asset('css/details.css') }}">
     <link rel="stylesheet" href="{{ asset('css/burger.css') }}">
     <link rel="stylesheet" href="{{ asset('css/search.css') }}">
-    <link rel="stylesheet" href="{{ asset('css/navbar.css') }}">
+    <link rel="stylesheet" href="{{ asset('css/navbar.scss') }}">
     {{ parent()}}
     {{ encore_entry_link_tags('app') }}
 {% endblock stylesheets %}
@@ -20,8 +20,16 @@
 {% block main %}
     <section class="">
         <div id="ico">
-            <div class="element"><img class="title logoBig" href="{{ path('profile_clubs') }}" src="{{ asset('icon/clubs_titre.png') }}" alt="Club"></div>
-            <div class="element"><img class="title logoBig" href="{{ path('profile_clubs') }}" src="{{ asset('icon/club.png') }}" alt="Club-icon"></div>
+            <div class="element">
+                <a href="{{ path('profile_clubs') }}">
+                    <img class="title logoBig" href="{{ path('profile_clubs') }}" src="{{ asset('icon/clubs_titre.png') }}" alt="Clubs">
+                </a>
+            </div>
+            <div class="element">
+                <a href="{{ path('profile_clubs') }}">
+                    <img class="title logoBig" href="{{ path('profile_clubs') }}" src="{{ asset('icon/club.png') }}" alt="Clubs-icon">
+                </a>
+            </div>
         </div>
         <div class="line"></div>
         <div class="">
@@ -30,7 +38,7 @@
                     <div id="divSearch">
                         <div class="btn logo icon">
                         <label for="userId">
-                            <img src="{{ asset('icon/loupe.png') }}" alt="loupe">
+                            <img class="logo icon" src="{{ asset('icon/loupe.png') }}" alt="loupe">
                         </label>
                         </div>
                         <div class="btn">
@@ -89,7 +97,7 @@
                                 </div>
                             </div>
                         </div>
-                    <profile
+                    </div>
             {% endfor %}
         </section>
 {% endblock main%}
