--- a/templates/profile/dashboard.html.twig
+++ b/templates/profile/dashboard.html.twig
@@ -39,8 +39,22 @@
                 </div>
             </div>
         {% endfor %}
-        <a href="{{ path('profile_clubs') }}">Voir tous les clubs</a>
-        <a class="link" href="{{ path('profile_club_create') }}">Créer un club</a>
+        <div class="card-ic">
+            <div id="adm-btn" class="adm-btn">
+                <div class="ic" ><a id="link1" href="{{ path('profile_club', {"id": club.id}) }}"><img src="{{ asset('icon/open-blue.png') }}" alt="Voir le club">
+                        <br><h4 class="pad5">Voir le club</h4></a>
+                </div>
+                <div class="ic" ><a id="link2" href="{{ path('profile_club_create') }}"><img src="{{ asset('icon/add-file-green.png') }}" alt="Créer un club">
+                        <br><h4 class="pad5">Créer un club</h4></a>
+                </div>
+                <div class="ic" ><a id="link3" href="{{ path('profile_club_update', {"id": club.id}) }}"><img src="{{ asset('icon/edit-pink.png') }}" alt="Modifier le club">
+                        <br><h4 class="pad5">Modifier le club</h4></a>
+                </div>
+                <div class="ic" ><a id="link4" href="{{ path('profile_club_delete', {"id": club.id}) }}"><img src="{{ asset('icon/delete-orange.png') }}" alt="Supprimer le club">
+                        <br><h4 class="pad5">Supprimer le club</h4></a>
+                </div>
+            </div>
+        </div>
     </section>
 
     <section class="section">
